crates/solidity-v2/testing/snapshots/diagnostics_output/semantic/cyclic_inheritance/deep/generated/solc/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

[TypeError 2449] Error: Definition of base has to precede definition of derived contract
   ╭─[input.sol:4:15]
   │
 4 │ contract X is Y {}
   │               ┬  
   │               ╰── Error occurred here.
───╯
